--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.17",
+    "@turf/turf": "^7.3.0",
     "axios": "^1.13.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.554.0",
