--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,5 @@
-fastapi
-uvicorn
-pandas
-geopy
-python-multipart
-pydantic
+fastapi==0.109.0
+uvicorn==0.27.0
+pandas==2.1.4
+pydantic==2.5.3
+python-multipart==0.0.6
